# langchain-shannonbase

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: benchmark.py
examples/: basic.py  rag.py
src/langchain_shannonbase/: __init__.py  _async_store.py  _filter.py  _ivf.py  _sql.py  _store.py  vectorstores.py
tests/: test_async.py  test_features.py  test_hybrid.py  test_integration.py  test_ivf.py  test_sql.py  test_standard.py  test_vectorstore.py
